objects/nBRIDGER__OFAC_Address__c.object
<CustomObject>
    <fields>
        <fullName>nBRIDGER__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__OFAC_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OFAC_Match</label>
        <referenceTo>nBRIDGER__OFAC_Match__c</referenceTo>
        <relationshipLabel>OFAC_Addresses</relationshipLabel>
        <relationshipName>OFAC_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Postal_Code__c</fullName>
        <label>Postal_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OFAC_Address</label>
    <nameField>
        <label>OFAC_Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>